fixed some aligning for restaurant pic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,5 +132,5 @@ h2 {
 
 .restaurant_pic {
   width: 70%;
-  align: center;
+  margin: 0 auto;
 }
